--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ ul {
     list-style-type: none;
 }
 
+/* Header Style */
+
 .header {
     display: flex;
     background-color: #1f2937;
@@ -25,6 +27,7 @@ ul {
 .header_container {
     display: flex;
     width: 1200px;
+    height: 128px;
     justify-content: space-between;
     align-items: center;
     padding: 8px;      
@@ -62,4 +65,91 @@ ul {
 .header_link {
     font-size: 18px;
     color: #e5e7eb;
+}
+
+/* Layer One Style */
+
+.layer_one {
+    display: flex;
+    background-color: #1f2937;
+    justify-content: center;
+}
+
+.l1_container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 1200px;
+    padding-top: 128px;
+    padding-bottom: 128px;
+}
+
+.website_description {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    gap: 16px;
+}
+
+.website_description_title {
+    font-size: 48px;
+    font-weight: 800;
+    color: #f9faf8;
+}
+
+.website_description_text {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+/* Layer Two Style */
+
+.layer_two {
+    display: flex;
+    background-color: #f9faf8;
+    justify-content: center;
+}
+
+.l2_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 1200px;
+    padding-top: 64px;
+    padding-bottom: 64px;
+}
+
+.project_title {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+}
+
+.project_elements {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 64px;
+    width: 1000px;
+}
+
+.project {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+}
+
+.project_img {
+    border: 8px solid #3882f6;
+    border-radius: 30px;
+    width: 128px;
+    height: auto;
+    padding: 32px;
+}
+
+.project_caption {
+    font-size: 18px;
+    color: #1f2937;
 }
