--- a/style.css
+++ b/style.css
@@ -150,9 +150,10 @@ ul {
     padding: 32px;
 }
 
-.project_caption {
+.project_caption a{
     font-size: 18px;
     color: #1f2937;
+    text-decoration: underline;
 }
 
 /* footer style */
