--- a/style.css
+++ b/style.css
@@ -12,8 +12,18 @@ a {
     color: #e5e7eb;
 }
 
+p {
+    font-size: 18px;
+}
+
 ul {
     list-style-type: none;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
 }
 
 /* Header Style */
@@ -122,12 +132,6 @@ ul {
     padding-bottom: 64px;
 }
 
-.project_title {
-    font-size: 36px;
-    font-weight: 900;
-    color: #1f2937;
-}
-
 .project_elements {
     display: flex;
     justify-content: space-between;
@@ -154,6 +158,32 @@ ul {
     font-size: 18px;
     color: #1f2937;
     text-decoration: underline;
+}
+
+/* Layer Three Style */
+
+.layer_three {
+    display: flex;
+    background-color: #e5e7eb;
+    justify-content: center;
+}
+
+.about_content {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 64px;
+    width: 1000px;
+    padding-top: 32px;
+}
+
+.about_text {
+    color: #1f2937;
+}
+
+.about_img {
+    width: 256px;
+    height: auto;
 }
 
 /* footer style */
