--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+/* colour palette
+    #f9faf8 (white)
+    #e5e7eb;
+    #1f2937 (blue)
+*/
 
 body {
     display: flex;
@@ -82,7 +87,7 @@ h2 {
 
 .layer_one {
     display: flex;
-    background-color: #1f2937;
+    background-color: #e5e7eb;
     justify-content: center;
 }
 
@@ -106,12 +111,12 @@ h2 {
 .website_description_title {
     font-size: 48px;
     font-weight: 800;
-    color: #f9faf8;
+    color: #1f2937;
 }
 
 .website_description_text {
     font-size: 18px;
-    color: #e5e7eb;
+    color: #1f2937;
 }
 
 /* Projects Section Style */
@@ -164,7 +169,7 @@ h2 {
 
 .layer_three {
     display: flex;
-    background-color: #e5e7eb;
+    background-color: #1f2937;
     justify-content: center;
 }
 
@@ -177,8 +182,12 @@ h2 {
     padding-top: 32px;
 }
 
+#h2_about {
+    color: #f9faf8;
+}
+
 .about_text {
-    color: #1f2937;
+    color: #f9faf8;
 }
 
 .about_img {
@@ -189,7 +198,7 @@ h2 {
 /* Connect Section Style */
 
 #h2_connect {
-    color: #e5e7eb;
+    color: #1f2937;
 }
 
 /* footer style */
